dom/media/webaudio/AudioListener.h
@@ -74,9 +74,6 @@ class AudioListener final : public nsWrapperCache {
 
   ~AudioListener() = default;
 
-  void SendThreeDPointParameterToStream(uint32_t aIndex,
-                                        const ThreeDPoint& aValue);
-
  private:
   RefPtr<AudioContext> mContext;
   RefPtr<AudioListenerEngine> mEngine;
