dom/media/webaudio/AudioNode.h
@@ -236,8 +236,6 @@ class AudioNode : public DOMEventTargetHelper, public nsSupportsWeakReference {
   // Helpers for sending different value types to streams
   void SendDoubleParameterToStream(uint32_t aIndex, double aValue);
   void SendInt32ParameterToStream(uint32_t aIndex, int32_t aValue);
-  void SendThreeDPointParameterToStream(uint32_t aIndex,
-                                        const ThreeDPoint& aValue);
   void SendChannelMixingParametersToStream();
 
  private:
